# cerebras-rs

./: Cargo.toml  Makefile  README.md  config.yaml  generate_integration_tests.sh  openapi.yaml
.cargo/: config.toml
.openapi-generator/: FILES
custom-templates/: Cargo.mustache  README.mustache  client.mustache  error.mustache  integration_test.mustache  lib.mustache
custom-templates/builders/: chat_completion_builder.mustache  completion_builder.mustache
custom-templates/examples/: function_calling.mustache  streaming.mustache
custom-templates/streaming/: mod.mustache
docs/: ChatChoiceDelta.md  ChatCompletion.md  ChatCompletionChunk.md  ChatCompletionRequest.md  ChatMessage.md  ChatMessageDelta.md  Completion.md  CompletionChoice.md  CompletionChoiceDelta.md  CompletionChunk.md  CompletionRequest.md  CreateChatCompletion200Response.md  CreateChatCompletionResponse.md  CreateCompletion200Response.md  CreateCompletionResponse.md  DefaultApi.md  ErrorDetail.md  FunctionCall.md  FunctionDefinition.md  FunctionName.md  JsonSchema.md  Model.md  ModelIdentifier.md  ModelList.md  Prompt.md  ResponseFormat.md  StopCondition.md  TimeInfo.md  Tool.md  ToolChoiceOption.md
examples/: chat_completion.rs  function_calling.rs  streaming.rs
scripts/: generate_integration_tests.py
src/: client.rs  error.rs  lib.rs
src/apis/: configuration.rs  default_api.rs
src/builders/: chat_completion_builder.rs  completion_builder.rs  mod.rs
src/models/: chat_choice.rs  chat_choice_delta.rs  chat_completion.rs  chat_completion_chunk.rs  chat_completion_request.rs  (+27 more)
tests/: integration.rs
(+2 files in other folders)
